Workspace sharing: pending invitations, accept/reject, push & bell
- Backend: workspace_invitations table; invite creates pending (no member until accept)
- APIs: GET /workspaces/invitations, POST accept/reject, DELETE cancel; getMembers includes pending for owner
- FCM: notify invitee on invite, inviter on accept; skip when Firebase not init (log + DEV.md)
- Frontend: ShareWorkspace pending label (styled), cancel invite (red); invitee accept/reject view; Lists bell + push tap to share
- Self-invite check by phone/email; explicit pending=false on members
- Restart skills: always restart BE/FE after changes; tests updated for invite→accept flow

Made-with: Cursor